# tigum-api

./: .env  404.html  Cargo.toml  README.md  Rocket.toml  delete.html  get.html  hello.html  patch.html  post.html  test.json
migrations/2019-08-13-210758_create_topics/: down.sql  up.sql
migrations/2019-08-13-215137_create_tables/: down.sql  up.sql
migrations/2021-09-21-193106_not_null_columns_topics/: up.sql
migrations/2021-09-23-193058_not_null_notes_feilds/: up.sql
migrations/2021-09-26-215345_not_null_videos/: up.sql
migrations/2021-09-28-215444_not_null_links/: up.sql
migrations/2021-11-03-204854_betausers_create/: up.sql
migrations/2022-07-06-182034_add_favicon_source/: up.sql
migrations/2022-07-19-173406_update_users_for_subdomain_and_profile_pic/: up.sql
src/: cors.rs  guards.rs  main.rs  models.rs  routes.rs  schema.rs  topic.rs
src/db/: api_response.rs  mod.rs  parsing_util.rs
src/db/models/: dto.rs  mod.rs
src/db/models/resources/: article_snippets.rs  code.rs  documents.rs  image.rs  link.rs  mod.rs  note.rs  video.rs
src/db/models/search/: resources.rs
src/db/models/topic/: mod.rs  note.rs
src/db/models/user/: mod.rs
src/db/querys/: article_snippets.q.rs  article_snippets_query.rs  code_query.rs  document_query.rs  image_query.rs  link_query.rs  mod.rs  note_q.rs  note_query.rs  public_query.rs  question_query.rs  search_resources_query.rs  topic_q.rs  topic_query.rs  user_query.rs  video.rs  video_q.rs  video_query.rs
src/models/: mod.rs  topic.rs
src/models/topic/: mod.rs  note.rs
src/routes/: article_snippet_routes.rs  code_routes.rs  document_routes.rs  image_routes.rs  link_routes.rs  mod.rs  note_routes.rs  public_routes.rs  question_routes.rs  quiz_routes.rs  search_resource_routes.rs  search_routes.rs  topic_routes.rs  user_routes.rs  video_routes.rs
src/util/: auth.rs  date.rs  evervault.rs  http.rs  mod.rs  sendgrid.rs
