[package]
name = "server"
version = "0.1.2"
authors = ["bbsmithy <briansmith.work578@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.0", features = ["json"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
jwt = "0.4.0"
rust-crypto = "^0.2"
chrono = { version = "0.4.17", features = ["serde"] }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", features = ["postgres_pool", "json", "databases"] }
postgres = { version = "0.17.5", features = ["with-chrono-0_4"] }
serde = { features = ["derive"] }
serde_json = "1.0"
rustc-serialize = "0.3"
bcrypt = { version = "0.6.1" }
