[package]
name = "server"
version = "0.1.2"
authors = ["bbsmithy <briansmith.work578@gmail.com>"]
edition = "2018"

[dependencies]
sha2 = { version = "0.9.3" }
reqwest = { version = "0.11.0", features = ["json"] }
rocket = "0.4.10"
jwt = "0.4.0"
rust-crypto = "^0.2"
chrono = { version = "0.4.17", features = ["serde"] }
postgres = { version = "0.17.5", features = ["with-chrono-0_4"] }
serde = { features = ["derive"], version = "1.0.129" }
serde_json = "1.0"
rustc-serialize = "0.3"
bcrypt = { version = "0.8.0" }
async-trait = "0.1.51"



[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["diesel_postgres_pool", "json"]